fix toaster on smaller devices

--- a/css/main.css
+++ b/css/main.css
@@ -581,7 +581,7 @@ footer .footer-lower i:hover {
 
   .toast {
     position: fixed !important;
-    top: 85vh !important;
+    top: 80vh !important;
     right: 30px !important;
   }
 }
@@ -637,6 +637,12 @@ footer .footer-lower i:hover {
   .content p {
     margin-top: 3px !important;
     font-size: 0.6em;
+  }
+
+  .toast {
+    position: fixed !important;
+    top: 80vh !important;
+    right: 20px !important;
   }
 }
 #section-1 .container-left .post {
