--- a/css/styles/queries.sass
+++ b/css/styles/queries.sass
@@ -5,7 +5,7 @@
 
     .toast 
         position: fixed !important
-        top: 85vh !important 
+        top: 80vh !important 
         right: 30px !important
 
 @media screen and (max-width: 768px)
@@ -58,3 +58,8 @@
         p 
             margin-top: 3px !important
             font-size: 0.6em
+
+    .toast 
+        position: fixed !important
+        top: 80vh !important 
+        right: 20px !important
